header animation mobile but bug line footer and button menu dekstop

--- a/wp-content/themes/archibald/assets/css/style.css
+++ b/wp-content/themes/archibald/assets/css/style.css
@@ -343,7 +343,7 @@ td {
 
 /* Header */
 
-header {
+.header {
     width: 100vw;
     height: var(--header-height);
     background-color: white;
@@ -352,6 +352,11 @@ header {
     top: 0;
     left: 0;
     z-index: 9999;
+}
+
+.header-link {
+    text-decoration: none;
+    margin: 0;
 }
 
 .logo {
@@ -419,23 +424,10 @@ header {
 }
 
 .menu-burger {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 20vw;
     display: none;
 }
 
-.line-burger {
-    width: 40px;
-    height: 2px;
-    background-color: var(--blue);
-    margin-bottom: 12px;
-}
-
 /* Footer */
-
 footer {
     width: 100vw;
     height: var(--footer-height);
@@ -508,7 +500,7 @@ footer {
 
 /* Responsive */
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 850px) {
 
     /* Header */
     :root {
@@ -518,12 +510,20 @@ footer {
     .lines {
         display: none;
     }
+  
+    .logo {
+        width: 50vw;
+    }
+
+    .archibald {
+        height: 60px;
+    }
 
     .button-basket {
         background-color: var(--white);
         justify-content: end;
         align-items: center;
-        width: 50vw;
+        width: 30vw;
     }
 
     .button-shop {
@@ -538,9 +538,85 @@ footer {
         display: none;
     }
 
-    .menu-burger {
-        
+    .button-burger {
+        position: relative;
         display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 80px;
+        height: 80px;
+        cursor: pointer;
+        transition: all .5s ease-in-out;
+    }
+
+    .lines-burger {
+        width: 50px;
+        height: 6px;
+        background-color: var(--blue);
+        border-radius: 5px;
+        box-shadow: 0 2px 5px rgba(255,101,47,.2);
+        transition: all .5s ease-in-out;
+    }
+
+        .lines-burger::before,
+        .lines-burger::after {
+            content: '';
+            position: absolute;
+            width: 50px;
+            height: 6px;
+            background-color: var(--blue);
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(255,101,47,.2);
+            transition: all .5s ease-in-out;
+        }
+
+        .lines-burger::before {
+            transform: translateY(-16px);
+        }
+
+        .lines-burger::after {
+            transform: translateY(16px);
+        }
+
+    .menu-burger {
+        display: block;
+        width: 75vw;
+        height: 100%;
+        background-color: var(--blue);
+        position: fixed;
+        top: 96px;
+        right: -75vw;
+        z-index: 9999;
+        padding-top: 5vw;
+        transition: all .5s ease-in-out;
+    }
+
+    .section-burger {
+        color: white;
+        font-weight: bold;
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        margin-left: 5vw;
+    }
+
+    /* ANIMATION HEADER */
+    .button-burger.open .lines-burger {
+        background: transparent;
+        box-shadow: none;
+    }
+
+    .button-burger.open .lines-burger::before {
+        transform: rotate(45deg);
+    }
+
+    .button-burger.open .lines-burger::after {
+        transform: rotate(-45deg);
+    }
+
+    .menu-burger.open
+    {
+        transform: translateX(-75vw);
     }
 
     /* Footer */
